--- a/templates/model-page.html
+++ b/templates/model-page.html
@@ -5,9 +5,8 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-light " style="background-color: #1e3d58;">
             <a class="navbar-brand text-white" >
-                <!--{% load static %}
-                <img src="{% static "engtec.png" %}" width="30" height="30" class="d-inline-block align-top rounded-lg" alt="" -->
-                Eng Tec
+              <img src="https://photos.app.goo.gl/QFgUqhPzDoL3uA9V7" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+              Eng Tec
               </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
               aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,21 +24,21 @@
                 <li class="nav-item">
                     <a class="nav-link text-white" href="#contato">Contato</a>
                   </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                    Faça Parte
-                  </a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Cliente</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Equipe</a>
-                  </div>
-                </li>
                 {% if user.is_authenticated %}
                 </ul>
-                <span style="margin-right: 8%;">
-                    <a class="navbar-text disabled text-white " href="#" aria-disabled="true" >{{user.username}}</a>
+                  <span style="margin-right: 2%;">
+                    <a class="navbar-text disabled text-white " href="#" aria-disabled="true" >Welcome {{user.username}}</a>
+                    <li class="navbar-text dropdown">
+                    <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                      aria-haspopup="true" aria-expanded="false">
+                      Projetos
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <a class="dropdown-item" href="#">Novo Projeto</a>
+                      <div class="dropdown-divider"></div>
+                      <a class="dropdown-item" href="#">Projetos em andamento</a>
+                    </div>
+                  </li>
                 <a href="/logout"><button class="btn btn-outline-primary my-2 my-sm-0 text-white" >Logout</button></a>
                 </span>
           
@@ -54,7 +53,7 @@
             </div>
           </nav>
           {% for message in messages %}
-          <div align="center">
+          <div class="alert-dark"align="center">
             <strong>Erro: </strong>{{ message}}
           </div>
           {% endfor %}
