--- a/templates/index.html
+++ b/templates/index.html
@@ -1,137 +1,31 @@
-{% extends "model-page.html" %}
+<DOCTYPE! html>
 
+<html>
 
-{% block content %}
+  <head>
+    {% include "base/model-header.html" %}
+  </head>
 
-<section id="sobrenos">
-  <div  style="padding: 8%;">
-    <div class="row">
-      <div class="col-md-12">
-        <h2>Sobre Nós</h2>
-      </div>      
-      <div class="col-md-6">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          <ul>
-            <li>Lorem ipsum dolor sit amet</li>
-          <li>consectetur adipiscing elit</li>
-          <li>sed do eiusmod tempor</li>
-          <li>abore et dolore magna aliqua</li>
-        </ul>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-          est laborum.</p>
-      </div>
-      <div class="col-md-6">
-        <img class="img-responsive" src="https://photos.app.goo.gl/QFgUqhPzDoL3uA9V7" >
-
-      </div>
+  <header>
+    {% include "components/menu.html" %}
+    <div id="" >
+      {% include "components/jumbotrom.html" %}
     </div>
-  </div>
-</section>
-<section id="galeria">
-    <div class="container-fluid " style="height: 30%; padding: 8%;background-color: #dbf0fd;">
-      <div class="col-md-12">
-        <h2>Galeria</h2>
-      </div> 
-      <div class="row">
-      <div class="bd-example col-md-4" style="padding: 2% ;">
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          </ol>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="..." class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="..." class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="..." class="d-block w-100" alt="...">
-            </div>
-          </div>
-          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
-      </div>
-      <div class="bd-example col-md-4" style="height: 30%; padding: 2% ;">
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          </ol>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="..." class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="..." class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="..." class="d-block w-100" alt="...">
-            </div>
-          </div>
-          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
-      </div>
-      <div class="bd-example col-md-4" style="padding: 2% ;">
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-          </ol>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="..." class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="..." class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="..." class="d-block w-100" alt="...">
-            </div>
-          </div>
-          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<section id="contato">
-  <div class="container-fluid bg-light" style="padding: 8%;">
-    <span>
-      <h3>Contato</h3>
-      <form class="form-inline my-2 my-lg-0" action="/login/submit" method="POST"> {% csrf_token %}
+  </header>
+  
 
-      </form>
-    </span>
-  </div>
-</section>
+  <div class="container content">
+    {% block content %}
 
-{% endblock %}
+      {% include "components/about.html" %}
+
+      {% include "components/galery.html" %}
+
+      {% include "components/contact.html" %}
+
+    {% endblock %}
+  </div>
+  
+  {% include "base/model-footer.html" %}
+
+</html>
