Alterações no layout

--- a/templates/components/menu.html
+++ b/templates/components/menu.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light " style="background-color: #1e3d58;">
     <a class="navbar-brand text-white" >
-      <img src="https://photos.google.com/share/AF1QipP0GV6UGtsZS1meBm2FbCuWNZasX0kKAucZDvtCFiQRQbKAtAAfvBbVWcx534YdyA/photo/AF1QipO0ejLRoVlNYm2F6sJYLRxBGfY4IOf-u_zr9syv?key=ZjVzOUlvU25fa1ZkZzJuS2RsaVFwbUtMVHowTl9R" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+      <img src="./templates/assets/images/engtech.png" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
       EngTech
     </a>
     {% comment %} Responsive menu {% endcomment %}
