--- a/templates/base/model-page.html
+++ b/templates/base/model-page.html
@@ -1,20 +1,34 @@
+<DOCTYPE! html>
+
 <html>
-    <head>
-        
-    </head>
-    <body>
-        
-          {% for message in messages %}
-            <script>
-              Swal.fire({
-                  icon: 'error',
-                  title: 'Oops...',
-                  text: 'Usuario e senha estão invalidos',
-                  footer: 'Tente novamente'
-                })
-            </script>
-          {% endfor %}
-        {% block content %}
+
+  <head>
+    {% include "base/model-header.html" %}
+  </head>
+
+  <header>
+    {% include "components/menu.html" %}
+    <div id="" >
+      {% include "components/jumbotrom.html" %}
+    </div>
+  </header>
+  
+
+  <div class="container content">
+    {% block content %}
+
+      {% include "components/about.html" %}
+
+      {% include "components/galery.html" %}
+
+      {% include "components/contact.html" %}
+
     {% endblock %}
-{% include "base/model-footer.html" %}
+  </div>
+  
+  {% include "base/model-footer.html" %}
+  {% include "js/main.js" %}
+</html>
+
+
   
