--- a/templates/components/menu.html
+++ b/templates/components/menu.html
@@ -1,6 +1,8 @@
+{% load static %}
+
 <nav class="navbar navbar-expand-lg navbar-light " style="background-color: #1e3d58;">
     <a class="navbar-brand text-white" >
-      <img src="./templates/assets/images/engtech.png" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
+      <img src="{% static 'assets/images/engtec.png' %}" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">
       EngTech
     </a>
     {% comment %} Responsive menu {% endcomment %}
