--- a/templates/components/about.html
+++ b/templates/components/about.html
@@ -1,26 +1,21 @@
+{% load static %}
+
 <section id="about">
   <div  style="padding: 8%;">
     <div class="row">
       <div class="col-md-12">
-        <h2>Sobre Nós</h2>
+        <h2 style="text-align: center">Sobre Nós</h2>
       </div>      
-      <div class="col-md-6">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-          <ul>
-            <li>Lorem ipsum dolor sit amet</li>
-          <li>consectetur adipiscing elit</li>
-          <li>sed do eiusmod tempor</li>
-          <li>abore et dolore magna aliqua</li>
-        </ul>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-          est laborum.</p>
+      <div class="col-md-12">
+       <div class="col-md-12 text-center" style="margin: 20px 0 20px 0">
+        <img class="img-responsive" src="{% static 'assets/images/engtec.png' %}" width="auto" height="auto" >
       </div>
-      <div class="col-md-6">
-        <img class="img-responsive" src="https://photos.app.goo.gl/QFgUqhPzDoL3uA9V7" >
+        <p>
+          Somos uma Empresa criada em 2020 por pessoas que viram uma oportunidade para inovar o mercado da engenharia civil , A EngTech se caracteriza pela inovação na forma de planejar, e pela sensibilidade para com o usuaio que tem uma ideia para construções no meio em que vive, mas não obteve apoio para realizar
+          Atuamos na área de constuções civis e sempre procuramos ajudar o nosso cliente da melhor forma possivel.
+        </p>
       </div>
+     
     </div>
   </div>
 </section>
