--- a/templates/components/contact.html
+++ b/templates/components/contact.html
@@ -1,10 +1,3 @@
-<section id="contato">
-  <div class="container-fluid bg-light" style="padding: 8%;">
-    <span>
-      <h3>Contato</h3>
-      <form class="form-inline my-2 my-lg-0" action="/login/submit" method="POST"> {% csrf_token %}
-
-      </form>
-    </span>
-  </div>
+<section id="contact" >
+    <h2 style="text-aling:center">Contato</h2>
 </section>
