--- a/templates/base/model-footer.html
+++ b/templates/base/model-footer.html
@@ -1,7 +1,13 @@
-<footer class="container-fluid text-center position-absolute" style="background-color: #1e3d58;"">
-    
-    <p class="text-white m-2">Desenvolvido por Bianca Sanches e Emily Carvalho</p>
-
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/footer.css' %}">
+<footer class="footer p-t-1" style="background: black">
+    <div class="container">
+        <a href="#"><i class="fa fa-linkedin fa-2x"></i></a>
+        <p class="h6" style="color: white">
+            Desenvolvido por Bianca e Emily
+            <a href="" target="_blank"></a>
+        </p>
+    </div>
 </footer>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
