--- a/templates/base/model-header.html
+++ b/templates/base/model-header.html
@@ -5,3 +5,7 @@
 <link rel="icon" type="image/png" href="{% static 'assets/images/engtec.png' %}">
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+<link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}" crossorigin="anonymous">
+<link rel="stylesheet" href="{% static 'css/owl.theme.default.css' %}" crossorigin="anonymous">
+<script src="{% static 'js/owl.carousel.js' %}"></script>
+<script src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
