--- a/templates/components/contact.html
+++ b/templates/components/contact.html
@@ -1,3 +1,41 @@
-<section id="contact" >
-    <h2 style="text-aling:center">Contato</h2>
+<section id="contact">
+    <h2 style="text-align:center">Contato</h2>
+
+    <form>
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <label for="inputEmail4">Nome</label>
+      <input type="text" class="form-control" id="inputEmail4">
+    </div>
+    <div class="form-group col-md-6">
+      <label for="inputPassword4">Sobrenome</label>
+      <input type="password" class="form-control" id="inputPassword4">
+    </div>
+  </div>
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <label for="inputCity">Cidade</label>
+      <input type="text" class="form-control" id="inputCity">
+    </div>
+    <div class="form-group col-md-4">
+      <label for="inputState">Estado</label>
+      <select id="inputState" class="form-control">
+        <option selected>Choose...</option>
+        <option>Bahia</option>
+        <option>São Paulo</option>
+        <option>Ceara</option>
+        <option>Pernambuco</option>
+        <option>Rio de Janeiro</option>
+        <option>Amazonas</option>
+        <option>Rio Grande do Sul</option>
+        <option>Rio Grande do Norte</option>
+      </select>
+    </div>
+    <div class="form-group col-md-2">
+      <label for="inputZip">CEP</label>
+      <input type="text" class="form-control" id="inputZip">
+    </div>
+  </div>
+  <button type="submit" class="btn btn-primary">Enviar ideia</button>
+</form>
 </section>
