--- a/templates/components/galery.html
+++ b/templates/components/galery.html
@@ -1,34 +1,41 @@
 {% load static %}
-
+<link rel="stylesheet" href="{% static 'css/galery.css' %}">
 <section id="galeria">
-    <div class="container-fluid ">
-      <div class="col-md-12">
-        <h2 style="text-align: center">Galeria</h2>
-      </div> 
-     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="{% static 'assets/images/foto1.jpg' %}" class="d-block w-100" width='100%' height="500px">
-    </div>
-    <div class="carousel-item">
-      <img src="{% static 'assets/images/foto2.jpg' %}" class="d-block w-100"  width='100%' height="500px">
-    </div>
-    <div class="carousel-item">
-      <img src="{% static 'assets/images/foto3.jpg' %}" class="d-block w-100"  width='100%' height="500px">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
+
+<h2 style="text-align:center">Galeria</h2>
+
+  <ul class="galery">
+    <li>
+      <div class="item">
+        <img src="{% static 'assets/images/foto1.jpg' %}" class="d-block w-100" width='100%' height="250px">
+      </div>
+    </li>
+    <li>
+      <div class="item">
+        <img src="{% static 'assets/images/foto2.jpg' %}" class="d-block w-100"  width='100%' height="250px">
+      </div>
+    </li>
+    <li>
+      <div class="item">
+        <img src="{% static 'assets/images/foto3.jpg' %}" class="d-block w-100"  width='100%' height="250px">
+      </div>
+    </li>
+    <li>
+      <div class="item">
+        <img src="{% static 'assets/images/foto3.jpg' %}" class="d-block w-100"  width='100%' height="250px">
+      </div>
+    </li>
+    <li>
+      <div class="item">
+        <img src="{% static 'assets/images/foto3.jpg' %}" class="d-block w-100"  width='100%' height="250px">
+      </div>
+    </li>
+    <li>
+      <div class="item">
+        <img src="{% static 'assets/images/foto3.jpg' %}" class="d-block w-100"  width='100%' height="250px">
+      </div>
+    </li>
+  </ul>
+
 </section>
+
