Tentativa de separar a dash

--- a/templates/base/model-footer.html
+++ b/templates/base/model-footer.html
@@ -4,7 +4,7 @@
     <div class="container">
         <a href="#"><i class="fa fa-linkedin fa-2x"></i></a>
         <p class="h6" style="color: white">
-            Desenvolvido por Bianca e Emily
+            Desenvolvido por Bianca, Matheus e Emily
             <a href="" target="_blank"></a>
         </p>
     </div>
