--- a/templates/components/login.html
+++ b/templates/components/login.html
@@ -13,7 +13,7 @@
             <input class="form-control mr-sm-2" placeholder="Senha" aria-label="Senha" type="password" name="password">
         </div>
         <div class="modal-footer">
-            <button class="btn btn-outline-primary my-2 my-sm-0 " type="submit" >Sign in</button>
+            <button class="btn btn-outline-primary my-2 my-sm-0 " type="submit" >Sign in</button>{% csrf_token %}
         </div>
         </form>
     </div>
