--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,101 +1,12 @@
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-  <meta charset="utf-8" />
-  <link rel="apple-touch-icon" sizes="76x76" href="../assets/img/apple-icon.png">
-  <link rel="icon" type="image/png" href="../assets/img/favicon.png">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <title> EngTech - Dashboard</title>
-  <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-  <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" />
-  <link href="{% static 'css/now-ui-dashboard.css' %}" rel="stylesheet" />
-  <link href="{% static 'demo/demo.css' %}" rel="stylesheet" />
-</head>
-<style>
-.panel-header-lg {
-  height: 200px !important;
-}
-#value {
-  text-align:center;
-}
-</style>
+      {% include "components/dash_base.html" %}
 
-<body class="">
-  <div class="wrapper ">
-    <div class="sidebar" data-color="orange">
-      <div class="logo">
-        <a href="/" class="simple-text logo-mini">
-          ET
-        </a>
-        <a href="/" class="simple-text logo-normal">
-          EngTech
-        </a>
-      </div>
-      <div class="sidebar-wrapper" id="sidebar-wrapper">
-        <ul class="nav">
-          <li class="active ">
-            <a href="/dashboard">
-              <i class="now-ui-icons design_app"></i>
-              <p>Dashboard</p>
-            </a>
-          </li>
-          <li>
-            <a href="/projetos">
-              <i class="now-ui-icons design_app"></i>
-              <p>Projetos</p>
-            </a>
-          </li>
-          <li>
-            <a href="/cliente">
-              <i class="now-ui-icons design_app"></i>
-              <p>Cliente</p>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
-    <div class="main-panel" id="main-panel">
-      <!-- Navbar -->
-      <nav class="navbar navbar-expand-lg navbar-dark  bg-primary  navbar-absolute">
-        <div class="container-fluid">
-          <div class="navbar-wrapper">
-            <div class="navbar-toggle">
-              <button type="button" class="navbar-toggler">
-                <span class="navbar-toggler-bar bar1"></span>
-                <span class="navbar-toggler-bar bar2"></span>
-                <span class="navbar-toggler-bar bar3"></span>
-              </button>
-            </div>
-            <a class="navbar-brand" href="#pablo">Dashboard</a>
-          </div>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-bar navbar-kebab"></span>
-            <span class="navbar-toggler-bar navbar-kebab"></span>
-            <span class="navbar-toggler-bar navbar-kebab"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navigation">
-            <ul class="navbar-nav">
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                   <i class="now-ui-icons users_single-02"></i>
-                </a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="#">{{user.username}}</a>
-                  <a class="dropdown-item" href="/logout"><i class="now-ui-icons ui-1_simple-remove"></i>Sair</a>
-                </div>
-              </li>
-              <li class="nav-item">
-                <a class="dropdown-item" href="/logout"><i class="now-ui-icons ui-1_simple-remove"></i>Sair</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-      <!-- End Navbar -->
+
+
+  <div class="container content">
+    {% block content %}
+
       <div class="panel-header panel-header-lg">
         <div></div>
       </div>
@@ -208,30 +119,10 @@
           </div>
         </div>
       </div>
-     {% include "base/model-footer.html" %}
-    </div>
+
+
+    {% endblock %}
   </div>
-  <!--   Core JS Files   -->
-  <script src="{% static 'js/core/jquery.min.js' %}"></script>
-  <script src="{% static 'js/core/popper.min.js' %}"></script>
-  <script src="{% static 'js/core/bootstrap.min.js' %}"></script>
-  <script src="{% static 'js/plugins/perfect-scrollbar.jquery.min.js' %}"></script>
-  <!--  Google Maps Plugin    -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
-  <!-- Chart JS -->
-  <script src="{% static 'js/plugins/chartjs.min.js' %}"></script>
-  <!--  Notifications Plugin    -->
-  <script src="{% static 'js/plugins/bootstrap-notify.js' %}"></script>
-  <!-- Control Center for Now Ui Dashboard: parallax effects, scripts for the example pages etc -->
-  <script src="{% static 'js/now-ui-dashboard.min.js' %} " type="text/javascript"></script><!-- Now Ui Dashboard DEMO methods, don't include it in your project! -->
-  <script src="{% static 'demo/demo.js' %}"></script>
-  <script>
-    $(document).ready(function() {
-      // Javascript method's body can be found in assets/js/demos.js
-      demo.initDashboardPageCharts();
-
-    });
-  </script>
-</body>
-
+  
+  {% include "components/dash-footer.html" %}
 </html>
