--- a/templates/components/dashboard/components/sideBarMenu.html
+++ b/templates/components/dashboard/components/sideBarMenu.html
@@ -16,13 +16,13 @@
             </a>
           </li>
           <li>
-            <a href="/projetos">
+            <a href="/dashboard/projeto/cadastro">
               <i class="now-ui-icons design_app"></i>
               <p>Projetos</p>
             </a>
           </li>
           <li>
-            <a href="/cliente">
+            <a href="/dashboard/cliente/cadastro">
               <i class="now-ui-icons design_app"></i>
               <p>Cliente</p>
             </a>
