--- a/templates/components/menu.html
+++ b/templates/components/menu.html
@@ -43,7 +43,7 @@
                       <form class="form-inline offset-1" action="/login/submit" method="POST" > {% csrf_token %}
                         <input class="form-control dropdown-item" type="text" placeholder="Usuário" aria-label="Usuário" name="username">
                         <input class="form-control dropdown-item" placeholder="Senha" aria-label="Senha" type="password" name="password">
-                        <button class="btn btn-outline-primary " type="submit" >Sign in</button>
+                        <button class="btn btn-outline-primary " type="submit" >Entrar</button>
                       </form>
                     </div>
                   </li>
